--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://www.linkedin.com/in/gustavo-itokawa/"target="_blank">Linkedin</a>
         </li>
         <li>
-            <a href=""target="_blank">Github</a>
+            <a href="https://github.com/GustavoSeitiItokawa"target="_blank">Github</a>
         </li>
         <li>
             <a href="https://www.instagram.com/gutitokawa/"target="_blank">Instagram</a>
